invalid_tests/declarations/test3.go
// Test 3: Short declaration without assignment
func main() {
    x :=
}
